test/errors/error13.base
The type could not be infered. Please add a type annotation.
fun foo() {
   val x;
       ^
